force-app/main/default/objects/WhatsappMeta__mdt/WhatsappMeta__mdt.object-meta.xml
<CustomObject>
    <label>Whatsapp Meta</label>
    <pluralLabel>WhatsappMeta</pluralLabel>
</CustomObject>