force-app/main/default/objects/WhatsappMeta__mdt/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>Access Token</label>
    <type>TextArea</type>
</CustomField>