force-app/main/default/objects/WhatsappMeta__mdt/fields/Meta_URL__c.field-meta.xml
<CustomField>
    <fullName>Meta_URL__c</fullName>
    <label>Meta URL</label>
    <type>Url</type>
</CustomField>