force-app/main/default/objects/WhatsappMeta__mdt/fields/PhoneNumber_Id__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber_Id__c</fullName>
    <label>Phone Number Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>