force-app/main/default/objects/WhatsappMeta__mdt/fields/WABA_Id__c.field-meta.xml
<CustomField>
    <fullName>WABA_Id__c</fullName>
    <label>Whatsapp Bussiness Account Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>